--- a/dashboard.html
+++ b/dashboard.html
@@ -2,49 +2,50 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Dashboard</title>
+<title>Dashboard Modern</title>
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="sidebar">
-<h2>Dashboard</h2>
-<ul>
-<li><a href="#">Beranda</a></li>
-<li><a href="#">Data Produk</a></li>
-<li><a href="#">Pengguna</a></li>
-<li><a href="#">Laporan</a></li>
-<li><a href="#">Pengaturan</a></li>
-</ul>
-</div>
+<aside class="sidebar">
+<h2 class="logo">UMKM</h2>
+<nav>
+<a class="active" href="#">🏠 Dashboard</a>
+<a href="#">📦 Produk</a>
+<a href="#">👤 Pengguna</a>
+<a href="#">📊 Laporan</a>
+<a href="#">⚙️ Pengaturan</a>
+</nav>
+</aside>
 
 
-<div class="main">
-<div class="header">
-<h1>Selamat Datang</h1>
-<p>Dashboard Sistem Informasi</p>
-</div>
+<main class="main">
+<header class="topbar">
+<h1>Dashboard</h1>
+<div class="profile">Admin</div>
+</header>
 
 
-<div class="cards">
+<section class="cards">
 <div class="card">
 <h3>Total Produk</h3>
 <p>120</p>
 </div>
 <div class="card">
-<h3>Total Pengguna</h3>
-<p>45</p>
-</div>
-<div class="card">
 <h3>Produk Aktif</h3>
 <p>98</p>
 </div>
+<div class="card">
+<h3>Total Pengguna</h3>
+<p>45</p>
 </div>
+</section>
 
 
-<div class="content">
-<h2>Informasi</h2>
-<p>Ini adalah halaman dashboard sederhana menggunakan HTML dan CSS tanpa framework.</p>
-</div>
-</div>
+<section class="content">
+<h2>Informasi Sistem</h2>
+<p>Dashboard ini menggunakan desain modern dengan gaya minimalis, card, dan sidebar interaktif.</p>
+</section>
+</main>
 </body>
 </html>
